# avans-cpp-2324

./: .gitignore  CMakeLists.txt  game_log_20231027_164137.txt  game_log_20231027_165540.txt  game_log_20231027_165859.txt  game_log_20231029_162932.txt  game_log_20231029_163052.txt  game_log_20231030_070131.txt  planetexpress.db
src/: main.cc
src/game/: command_center.cc  command_center.h  game.cc  game.h  game_manager.cc  game_manager.h  game_state.h  scanner.cc  scanner.h  sector.h  spaceship.cc  spaceship.h
src/game/commands/: command.h  deliver_package_command.cc  deliver_package_command.h  empty_command.cc  empty_command.h  encounter_character_command.cc  encounter_character_command.h  game_reset_command.cc  game_reset_command.h  move_command.cc  move_command.h  pickup_package_command.cc  pickup_package_command.h  quit_game_command.cc  quit_game_command.h  reset_game_command.cc  reset_game_command.h  view_package_command.cc  view_package_command.h
src/game/data/: coords.h  direction.h  grid.h  movement_direction.h
src/game/data_models/: consequence.h  consequence_source.h  consequence_type.h  encounter_model.h  package.h  package_model.h
src/game/data_types/: coords.h  grid.h  vector_grid.h
src/game/encounters/: encounter_generator.cc  encounter_generator.h
src/game/entities/: scan_creator.cc  scan_creator.h  scan_object.h  scan_pick_result.h  scanner.cc  scanner.h
src/game/enums/: direction.h  encounter_character.h  encounter_consequence_type.h  main_game_state.h  sector_object_type.h  sub_game_state.h
src/persistence/: data_handler.cc  data_handler.h  database_connection.cc  database_connection.h  logger.cc  logger.h  sqlite_connection.cc  sqlite_connection.h  sqlite_connection_wrapper.cc  sqlite_connection_wrapper.h
src/ui/: ansi_colors.h  input.cc  input.h  ui.cc  ui.h
(+49 files in other folders)
